# launch-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: camera.hpp  logger.hpp  radar.hpp  trigger.hpp
scripts/: build.sh  run_tests.sh
src/: camera.cpp  logger.cpp  main.cpp  radar.cpp  trigger.cpp
tests/: CMakeLists.txt  camera_test.cpp  logger_test.cpp  radar_test.cpp  trigger_test.cpp
